--- a/assets/ss3-hera.qmd
+++ b/assets/ss3-hera.qmd
@@ -32,7 +32,7 @@ There are a few main differences that serve to illustrate useful modifications t
 The *hera/ss3* example can be set-up either by cloning the repository `git clone https://github.com/MOshima-PIFSC/NSASS-HTC-HPC-Computing.git`, or stepping through the following code:
 
 ::: {.callout-important}
-# Coding alert!
+### Coding alert!
 Note: throughout this tutorial we are using **User.Name** as a stand-in for your actual username and **NMFS/project_name** as a stand-in for your project. In all cases, replace **User.Name** with your actual user name and **NMFS/project_name** with your specific project name. 
 :::
 
@@ -41,7 +41,7 @@ Note: throughout this tutorial we are using **User.Name** as a stand-in for your
 Software containers allow for portable, reproducible research by allowing researchers to set-up a software environment to their exact spefications and being able to run it on any Linux system. The [Apptainer](https://apptainer.org/) container system is widely used across HPC/HTC systems, and make it easy to build a container from a definition file. Running a job within a container means that you are able to replicate an identical software environment in any location with Apptainer installed, no matter the native operating system, software and installed packages. The Apptainer container can be built from any Linux machine with Apptainer installed, including the [Open Science Grid](https://osg-htc.org/) (OSG) access points. Here we walk through the steps needed to build a Linux (Ubuntu 20.04) container containing Stock Synthesis (version 3.30.22.1), R (version 4.4.0) and the R packages r4ss, ss3diags, data.table, magrittr, and mvtnorm from a definition file, [linux-r4ss-v4.def](https://github.com/MOshima-PIFSC/NSASS-HTC-HPC-Computing/blob/main/apptainer/linux-r4ss-v4.def). In this case we will show the steps needed to build the container using the OSG access point as our Linux virtual machine (VM), though many may not be needed if working from an alternative Linux VM.
 
 ::: {.callout-important}
-# Coding alert!
+### Coding alert!
 Note: you will have to change **apXX** to match your OSG access point (e.g., `ap20` or `ap21`).
 :::
 
@@ -111,6 +111,22 @@ hera_project = "NMFS/project_name/User.Name/"
 #| code-fold: true
 test_models=list.dirs(paste0(proj_dir,"/examples/hera/ss3/inputs/models/"),recursive=FALSE,full.names=FALSE)
 retro_peels=0:4
+
+# replace '-' with '_' in model names since we will use '-' as a delimiter
+    if(length(grep("-",test_models,fixed=TRUE))){
+        test_models_new = gsub("-","_",test_models)
+        rename_models_idx = grep("-",test_models,fixed=TRUE)
+        for(i in seq_along(rename_models_idx)){
+            # create new dir
+            dir.create(paste0(proj_dir,"/examples/hera/ss3/inputs/models/",test_models_new[rename_models_idx[i]]),recursive=TRUE)
+            # copy files
+            file.copy(paste0(proj_dir,"/examples/hera/ss3/inputs/models/",test_models[rename_models_idx[i]],"/",list.files(paste0(proj_dir,"/examples/hera/ss3/inputs/models/",test_models[rename_models_idx[i]]),full.names=FALSE,recursive=FALSE)),paste0(proj_dir,"/examples/hera/ss3/inputs/models/",test_models_new[rename_models_idx[i]]))
+            # delete old dir
+            # file.remove(paste0(proj_dir,"/examples/hera/ss3/inputs/models/",test_models[rename_models_idx[i]],"/"))
+            shell(paste0("powershell rm -r ",proj_dir,"/examples/hera/ss3/inputs/models/",test_models[rename_models_idx[i]],"/"))
+        }
+    }
+    test_models = test_models_new
 
 # define scenarios
 scenario_df = expand.grid(model=test_models,peel=retro_peels)
@@ -204,8 +220,147 @@ find . -type f -name End.tar.gz -exec echo . \; | wc -l
 find . -type f -name End.tar.gz -exec du -ch {} +
 ```
 
+5. Download jobs and clean-up workspace
+
 Once all jobs are completed (or the job has hit its time limit), use your *Terminal B* to download your jobs.
 
 ```{bash}
 scp -o MACs=hmac-sha2-256-etm@openssh.com -r User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/NMFS/project_name/User.Name/examples/ss3/output/ examples/hera/ss3/
+```
+
+Lastly in *Terminal A*, clean-up the `/scratch1/NMFS/project_name/User.Name/` directory since it is a shared space.
+::: {.callout-important}
+### Warning!
+Make sure that you have verified that your jobs completed successfully and that all results have been downloaded before cleaning-up the directory.
+:::
+```{bash}
+#| eval: false
+#| echo: true
+#| output: false
+# move back up a level in the directory structure
+cd ..
+# delete the ss3/ directory
+rm -r ss3/
+```
+
+## Process results
+
+After results are downloaded they can be processed in R to extract the model run times, time series of estimated biomass for each model run, and Mohn's rho across retrospective peels for a given model 'family'.
+
+```{r}
+#| eval: false
+#| code-fold: true
+# iterate over output files and extract quantities
+library(data.table)
+library(magrittr)
+library(r4ss)
+
+output_dirs = list.dirs(paste0(proj_dir,"/examples/hera/ss3/output/"),recursive=FALSE,full.names=FALSE)
+ssb_dt.list = comptime_dt.list = as.list(rep(NA,length(output_dirs)))
+ss_output_list =  as.list(rep(NA,length(output_dirs)))
+names(ss_output_list) = output_dirs
+
+for(i in seq_along(output_dirs)){
+    tmp_model = strsplit(output_dirs[i],"-")[[1]][2]
+    tmp_peel = as.numeric(strsplit(output_dirs[i],"-")[[1]][3])
+    tmp_index = as.numeric(strsplit(output_dirs[i],"-")[[1]][1])
+
+    # check if the End.tar.gz file got created
+    if(file.exists(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/End.tar.gz")))
+    {
+        # get snapshot of original files in the directory
+        tmp_orig_files = list.files(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/"))
+
+        # un-tar if the End.tar.gz file gets made
+        shell(paste0("powershell cd ", paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/"), ";tar -xzf End.tar.gz"))
+
+        # check if runtime.txt was produced and extract output
+        if(file.exists(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/runtime.txt"))){
+            tmp_time = readLines(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/runtime.txt")) %>%
+            gsub(".*?([0-9]+).*", "\\1", .) %>%
+            as.numeric(.) %>%
+            as.data.table(.) %>%
+            setnames(.,".","time")
+            comptime_dt.list[[i]] = data.table(id = output_dirs[i])    
+            comptime_dt.list[[i]]$index = tmp_index
+            comptime_dt.list[[i]]$model = tmp_model
+            comptime_dt.list[[i]]$peel = tmp_peel
+            comptime_dt.list[[i]]$hera_start = as.POSIXct(tmp_time$time[1],origin="1970-01-01")
+            comptime_dt.list[[i]]$hera_end = as.POSIXct(tmp_time$time[2],origin="1970-01-01")
+            comptime_dt.list[[i]]$hera_runtime = tmp_time$time[3]/60
+
+            # clean-up
+            rm(list=c("tmp_time"))
+        }
+
+        # if "ss_report.RData" is produced put it into the storage list
+        if(file.exists(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/ss_report.RData"))){
+            load(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/ss_report.RData"))
+            ss_output_list[[i]] = ss_report
+
+            ssb_dt.list[[i]] = ss_report$derived_quants %>%
+                as.data.table(.) %>%
+                .[Label %in% paste0("SSB_", ss_report$startyr:ss_report$endyr)] %>%
+                .[,id := output_dirs[i]] %>%
+                .[,sbo:=Value/subset(ss_report$derived_quants,Label=="SSB_Virgin")$Value] %>%
+                .[,yr:=sapply(Label,function(x)as.numeric(strsplit(x,"_")[[1]][2]))] %>%
+                .[,.(id,yr,sbo)]
+            # clean-up
+                rm(list=c("ss_report"))
+        }    
+
+        # clean-up
+        file.remove(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/",setdiff(list.files(paste0(proj_dir,"/examples/hera/ss3/output/",output_dirs[i],"/")),tmp_orig_files)))
+        rm(list=c("tmp_orig_files"))
+    } else {
+        comptime_dt.list[[i]] = data.table(id=output_dirs[i],index=tmp_index,model=tmp_model,peel=tmp_peel,hera_start=NA,hera_end=NA,hera_runtime=NA)
+        ssb_dt.list[[i]] = data.table(id=output_dirs[i],yr=2023,sbo=NA)
+    }
+
+    # clean-up
+    rm(list=c("tmp_model","tmp_peel","tmp_index"))
+}
+
+comptime_dt = rbindlist(na.omit(comptime_dt.list))
+ssb_dt = rbindlist(ssb_dt.list) %>% merge(comptime_dt[,.(id,index,model,peel)],.,by="id")
+ss_output_list = na.omit(ss_output_list)
+
+# adjust times to account for the fact that model 79 did not finish within the 1 hour allocation
+comptime_dt$hera_start[79] = comptime_dt$hera_start[80]
+comptime_dt$hera_end[79] = comptime_dt$hera_start[79] + 60^2
+comptime_dt$hera_runtime[79] = 60
+
+# save
+fwrite(comptime_dt,file=paste0(proj_dir,"/examples/hera/ss3/output/comptime_dt.csv"))
+fwrite(ssb_dt,file=paste0(proj_dir,"/examples/hera/ss3/output/ssb_dt.csv"))
+
+# calculate Mohn's rho
+unique_models = unique(comptime_dt$model)
+retro_dt.list = as.list(rep(NA,length(unique_models)))
+
+for(i in seq_along(unique_models)){
+    tmp_model = unique_models[i]
+
+    retro_dt.list[[i]] = data.table(model=tmp_model)
+    retro_dt.list[[i]]$type = c("SBO")
+    retro_dt.list[[i]]$rho = NA
+
+    if(uniqueN(na.omit(ssb_dt[model==tmp_model])$peel)==5){
+        tmp_dt = ssb_dt[model==tmp_model]
+        base_dt = tmp_dt[peel==0]
+        year_vec = max(base_dt$yr) - 1:4
+        bias_vec = rep(NA,length(year_vec))
+        # calc Mohn's rho for runs where all models completed
+        for(j in 1:4){
+            bias_vec[j] = (ssb_dt[model==tmp_model&peel==j&yr==year_vec[j]]$sbo - base_dt[yr==year_vec[j]]$sbo)/base_dt[yr==year_vec[j]]$sbo
+        }
+        retro_dt.list[[i]]$rho = mean(bias_vec)
+        rm(list=c("tmp_dt","base_dt","year_vec","bias_vec"))
+    } 
+    
+    rm(list=c("tmp_model"))
+}
+
+retro_dt = rbindlist(retro_dt.list)
+fwrite(retro_dt,file=paste0(proj_dir,"/examples/hera/ss3/output/retro_dt.csv"))
 ```
